// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinedValues renders markup with state 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearRefinements={[Function String]}
  clearRefinementsLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinements"
  >
    
        
    
    
  
        
    <ul
      class="ais-CurrentRefinements-list"
    >
      
          
      
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            Canon
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                27
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            Sony
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                28
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            Cameras & Camcorders
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                55
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            ≥ 0
          </span>
          
              
          
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      
        
    </ul>
    
  
        
    
    <button
      class="ais-CurrentRefinements-reset"
    >
      
          Clear refinements
        
    </button>
    
      
  </div>
    
</ng-ais-current-refinements>
`;

exports[`CurrentRefinedValues renders markup without state 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearRefinements={[Function String]}
  clearRefinementsLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinements"
  >
    
        
    
    
  
        
    <ul
      class="ais-CurrentRefinements-list"
    >
      
          
      
      
        
    </ul>
    
  
        
    
    <button
      class="ais-CurrentRefinements-reset"
    >
      
          Clear refinements
        
    </button>
    
      
  </div>
    
</ng-ais-current-refinements>
`;

exports[`CurrentRefinedValues should apply \`transformItems\` if specified 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearRefinements={[Function String]}
  clearRefinementsLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinements"
  >
    
        
    
    
  
        
    <ul
      class="ais-CurrentRefinements-list"
    >
      
          
      
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            foo - Canon
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                27
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            foo - Sony
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                28
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            foo - Cameras & Camcorders
          </span>
          
              
          
          <span
            class="ais-CurrentRefinements-count"
          >
            
                55
              
          </span>
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      <li
        class="ais-CurrentRefinements-item"
      >
        
            
        <button
          class="ais-CurrentRefinements-button"
        >
          
              
          <span
            class="ais-CurrentRefinements-label"
          >
            foo - ≥ 0
          </span>
          
              
          
          
              
          <span
            class="ais-CurrentRefinements-delete"
          >
            ✕
          </span>
          
            
        </button>
        
          
      </li>
      
        
    </ul>
    
  
        
    
    <button
      class="ais-CurrentRefinements-reset"
    >
      
          Clear refinements
        
    </button>
    
      
  </div>
    
</ng-ais-current-refinements>
`;

exports[`CurrentRefinedValues should be hidden with \`autoHideContainer\` 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  autoHideContainer={[Function Boolean]}
  clearRefinements={[Function String]}
  clearRefinementsLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      
    
</ng-ais-current-refinements>
`;
